--- a/www/templates/adventurerTemplate.html
+++ b/www/templates/adventurerTemplate.html
@@ -73,13 +73,13 @@
         baseUrl: 'js/lib'
     });
     requirejs([
-        'vue',
-        'app/TimeManager',
-        'app/AdventurerManager',
-        'app/DataManager'
-    ],
+            'vue',
+            'app/TimeManager',
+            'app/AdventurerManager',
+            'app/DataManager'
+        ],
 
-        function (Vue, TimeManager, AdventurerManager, DataManager) {
+        function(Vue, TimeManager, AdventurerManager, DataManager) {
             console.log("Registering adventurer template.")
 
             Adventurer = new AdventurerManager();
@@ -90,43 +90,43 @@
                 props: ['adventurer'],
                 template: '#adventurer',
                 computed: {
-                    birthDate: function () {
+                    birthDate: function() {
                         return Time.getGameTime(this.adventurer.birthTime).toDateString();
                     },
-                    deathDate: function () {
+                    deathDate: function() {
                         return Time.getGameTime(this.adventurer.timeOfDeath).toDateString();
                     },
-                    causeOfDeath: function () {
+                    causeOfDeath: function() {
                         if (!this.adventurer.causeOfDeath) return "Unknown";
                         return this.adventurer.causeOfDeath.injuryType + ' ' + this.adventurer.causeOfDeath.bodyPart;
                     },
-                    age: function () {
+                    age: function() {
                         if (adventurer.status == "Dead") {
                             return Adventurer.getAgeAtDeath(this.adventurer);
                         } else {
                             return Adventurer.getAge(this.adventurer);
                         }
                     },
-                    showQuote: function () {
+                    showQuote: function() {
                         return this.adventurer.quote && this.adventurer.status == "Idle";
                     },
-                    isInjured: function () {
-                        if (!adventurer.injuries) adventurer.injuries = [];
-                        return adventurer.injuries.length !== 0;
+                    isInjured: function() {
+                        if (!this.adventurer.injuries) this.adventurer.injuries = [];
+                        return this.adventurer.injuries.length !== 0;
                     },
-                    isDead: function () {
+                    isDead: function() {
                         return this.adventurer.status == "Dead";
                     },
-                    isQuesting: function () {
+                    isQuesting: function() {
                         return this.adventurer.status == "Questing" && Adventurer.getAdventurersQuest(this.adventurer) !== undefined;
                     },
-                    questName: function () {
+                    questName: function() {
                         return Adventurer.getAdventurersQuest(this.adventurer).contract.name;
                     }
                 },
                 components: {},
                 methods: {
-                    getIcon: function (skillName) {
+                    getIcon: function(skillName) {
                         return 'img/icons/' + Data.getData('skills', skillName).icon + '.png';
                     }
                 }
