--- a/www/templates/adventurerTemplate.html
+++ b/www/templates/adventurerTemplate.html
@@ -62,6 +62,10 @@
             <div v-if="isQuesting" class="col-xs-12 well well-sm">
                 Quest: {{questName}}
             </div>
+            <!-- Stats -->
+            <div v-if="showStats" class="col-xs-12 well well-sm">
+                Quests completed: {{questsCompletedCount}}
+            </div>
         </div>
         <!-- <div class="panel-footer ">
                 <span :class="{'text-muted': isDead}">{{adventurer.coins}} coins</span>
@@ -127,6 +131,15 @@
                     },
                     questName: function() {
                         return Adventurer.getAdventurersQuest(this.adventurer).contract.name;
+                    },
+                    showStats: function() {
+                        return this.adventurer.questLog !== undefined && this.adventurer.questLog.length > 0;
+                    },
+                    questsCompletedCount: function() {
+                        if (this.adventurer.questLog !== undefined) {
+                            return this.adventurer.questLog.length;
+                        }
+                        return 0;
                     }
                 },
                 components: {},
